--- a/src/assets/scss/object/project/_addons.scss
+++ b/src/assets/scss/object/project/_addons.scss
@@ -466,6 +466,7 @@
 					font-size: 18px;
 					font-weight: 700;
 					font-family: yu-mincho-pr6n, sans-serif;
+					letter-spacing: 0.26em;
 
 					@include is-max(1000px) {
 						font-size: 1.6vw;
@@ -487,6 +488,7 @@
 					font-size: 11px;
 					font-family: cross-platform-yu-gothic, sans-serif;
 					font-weight: 500;
+					letter-spacing: 0.2em;
 
 					@include is-max(1000px) {
 						font-size: 1.2vw;
