--- a/src/assets/scss/pages/_access.scss
+++ b/src/assets/scss/pages/_access.scss
@@ -3,12 +3,25 @@
 		padding: 0 0 80px 0;
 		background: linear-gradient(to right, #2079bd, #1e91d2);
 
-		@include is-max(400px){
-            padding: 0 0 95px 0;
-        }
+		@include is-max(400px) {
+			padding: 0 0 95px 0;
+		}
+
+		&--ttl {
+
+			p {
+				@include is-max(400px) {
+					&:nth-child(1) {
+						line-height: 1.25em;
+					}
+				}
+			}
+
+		}
 	}
 
 	position: relative;
+
 	&__section_1 {
 		background: linear-gradient(to right, #003782, #0059b6);
 		clip-path: polygon(0 6%, 100% 0%, 100% 101%, 0% 100%);
@@ -45,6 +58,7 @@
 		position: relative;
 		z-index: 150;
 		padding-top: 12px;
+
 		.txt {
 			width: 90%;
 			margin: 0 auto;
@@ -407,6 +421,7 @@
 					height: 250px;
 					padding-bottom: 20px;
 				}
+
 				// background: red;
 				img {
 					width: 100%;
@@ -423,6 +438,7 @@
 		@include is-sp {
 			padding-bottom: 75px;
 		}
+
 		.pt100 {
 			position: relative;
 			padding-top: 99px;
@@ -697,6 +713,7 @@
 			padding: 0 !important;
 			justify-content: space-around;
 		}
+
 		@include is-sp {
 			flex-direction: column;
 			padding: 0;
@@ -723,6 +740,7 @@
 			}
 		}
 	}
+
 	&--btn:last-child {
 		margin-left: 30px;
 	}
@@ -731,6 +749,7 @@
 		&--btn:first-child {
 			margin: 0;
 		}
+
 		&--btn:last-child {
 			margin: 25px 0 0 0;
 		}
