--- a/src/assets/scss/pages/_access.scss
+++ b/src/assets/scss/pages/_access.scss
@@ -478,7 +478,7 @@
 							width: 100%;
 							padding: 20px 0;
 							margin-bottom: 25px;
-							height: auto;
+							height: 95px;
 							text-align: center;
 						}
 
@@ -621,7 +621,7 @@
 
 			@include is-sp {
 				width: 122px;
-				top: 16px;
+				top: 33px;
 			}
 		}
 
