--- a/src/assets/scss/object/component/_card.scss
+++ b/src/assets/scss/object/component/_card.scss
@@ -332,61 +332,61 @@
 
 .c-card07 {
 	position: relative;
-	
-	&:nth-child(3){
-		&::before{
+
+	&:nth-child(3) {
+		&::before {
 			border-left: 2px dashed #aeaeae;
 			position: absolute;
 			height: 100%;
 			content: "";
 			left: -8%;
-			@include is-max(1000px){
+			@include is-max(1000px) {
 				display: none;
 			}
 		}
-		&::after{
+		&::after {
 			border-left: 2px dashed #aeaeae;
 			position: absolute;
 			height: 100%;
 			content: "";
 			right: -8%;
 			top: 0;
-			@include is-max(1000px){
+			@include is-max(1000px) {
 				display: none;
 			}
 		}
 	}
-	&:nth-child(7){
-		&::before{
+	&:nth-child(7) {
+		&::before {
 			border-left: 2px dashed #aeaeae;
 			position: absolute;
 			height: 100%;
 			content: "";
 			left: -8%;
-			@include is-max(1000px){
+			@include is-max(1000px) {
 				display: none;
 			}
 		}
-		&::after{
+		&::after {
 			border-left: 2px dashed #aeaeae;
 			position: absolute;
 			height: 100%;
 			content: "";
 			right: -8%;
 			top: 0;
-			@include is-max(1000px){
+			@include is-max(1000px) {
 				display: none;
 			}
 		}
 	}
-	
+
 	position: relative;
 	// height: 190px;
 	// width: calc(100% / 3);
 	// border-right: 2px dashed #aeaeae;
 	// padding-left: 35px;
 	// padding-right: 28px;
-		width: 30%;
+	width: 30%;
 	@include is-max(1000px) {
 		width: 48%;
 		padding: unset;
@@ -474,7 +474,7 @@
 		width: 48%;
 	}
 
-	@include is-max (414px) {
+	@include is-max(414px) {
 		margin-bottom: 15px;
 	}
 
@@ -549,7 +549,6 @@
 			font-family: cross-platform-yu-gothic;
 			letter-spacing: 0.2em;
 			color: #258acf;
-
 
 			@include is-max(430px) {
 				font-size: 3vw;
@@ -662,6 +661,322 @@
 
 		@include is-max(367px) {
 			font-size: 3.5vw;
+		}
+	}
+}
+
+.c-card10 {
+	// display: inline-block;
+	width: 100%;
+	&-center {
+		position: relative;
+
+		img {
+			width: 100%;
+		}
+
+		.top-box {
+			position: absolute;
+			top: 10px;
+			left: 10px;
+			width: 40px;
+			height: 40px;
+			background: linear-gradient(to right, #043fc5, #007ecd);
+			text-align: center;
+			padding: 2px;
+
+			@include is-sp {
+				width: 44.5px;
+				height: 44.5px;
+			}
+
+			&-content {
+				height: 100%;
+				display: flex;
+				flex-direction: column;
+				justify-content: center;
+				border-top: 1px solid #fff;
+				border-right: 1px solid #fff;
+				p:first-child {
+					@include font-line(8.17);
+					color: #96bcdb;
+					line-height: 1;
+					padding-top: 5px;
+				}
+
+				p:last-child {
+					@include font-line(24.78);
+					color: #fff;
+					line-height: 1;
+
+					@include is-sp {
+						@include font-line(27);
+					}
+				}
+			}
+		}
+
+		&-text {
+			position: absolute;
+			top: 44%;
+			left: 10px;
+			transform: translateY(-20%);
+			@include font-line(18.56);
+			letter-spacing: 0.3em;
+			line-height: 25.67px;
+			color: #fff;
+			font-weight: 700;
+
+			@include is-max(980px) {
+				top: 50%;
+			}
+
+			@include is-max(900px) {
+				top: 44%;
+			}
+
+			@include is-sp {
+				@include font-line(20);
+			}
+
+			@include is-max(350px) {
+				top: 52%;
+			}
+		}
+	}
+
+	&-bottom {
+		p {
+			padding-top: 25px;
+			text-align: center;
+			letter-spacing: 0.2em;
+			@include font-line(14);
+			line-height: 21px;
+			font-family: cross-platform-yu-gothic, sans-serif;
+			color: #ffffff;
+			font-weight: 700;
+
+			@include is-sp {
+				font-weight: 700;
+				@include font-line(19);
+				line-height: 22.5px;
+				padding-top: 21px;
+			}
+
+			@include is-max(400px) {
+				font-size: 4.5vw;
+				letter-spacing: 0.14em;
+			}
+		}
+	}
+}
+
+.c-card11 {
+	&-top {
+		position: relative;
+
+		img {
+			width: 100%;
+		}
+
+		.top-box {
+			position: absolute;
+			top: 12px;
+			left: 14px;
+			width: 40px;
+			height: 40px;
+			background: linear-gradient(90deg, #2579bf 0%, #2593d5 50%);
+			text-align: center;
+			padding: 2px;
+
+			@include is-sp {
+				width: 44.5px;
+				height: 44.5px;
+			}
+
+			&-content {
+				height: 100%;
+				display: flex;
+				flex-direction: column;
+				justify-content: center;
+				border-top: 1px solid #fff;
+				border-right: 1px solid #fff;
+
+				p {
+					@include font-line(24.78, 42.86);
+					font-weight: 700;
+					font-family: century-gothic, sans-serif;
+					color: #fff;
+				}
+			}
+		}
+	}
+
+	&-bottom {
+		border: 1px solid #000;
+		border-top: none;
+		padding: 0 19px 10px;
+		min-height: 185px;
+
+		&-title {
+			@include font-line(14, 14);
+			font-weight: 700;
+			letter-spacing: 0.2em;
+			font-family: cross-platform-yu-gothic, sans-serif;
+			color: #1f80c3;
+			text-align: center;
+			padding: 25px 0 15px 0;
+
+			@include is-max(962px) {
+				font-size: 1.4vw;
+			}
+
+			@include is-sp {
+				@include font-line(18);
+			}
+
+			@include is-max(385px) {
+				font-size: 4.2vw;
+			}
+		}
+
+		&-para {
+			@include font-line(11, 16.5);
+			font-weight: 500;
+			letter-spacing: 0.2em;
+			font-family: cross-platform-yu-gothic, sans-serif;
+			color: #808080;
+			text-align: justify;
+
+			@include is-sp {
+				@include font-line(12.5, 22.5);
+			}
+		}
+	}
+}
+
+.c-card12 {
+	background-color: #fff;
+	padding: 20px;
+	width: calc(100% - 414px);
+
+	&--row {
+		display: flex;
+		// justify-content: space-between;
+		align-items: center;
+		// padding: 20px 0 18px 0;
+		border-top: 1px dotted #9e9e9e;
+		position: relative;
+
+		&1,
+		&4 {
+			justify-content: space-between;
+			& p:first-child {
+				color: #a6a6a6;
+				font-weight: 700;
+				letter-spacing: 0.15em;
+				line-height: 21px;
+				font-family: cross-platform-yu-gothic, sans-serif;
+				@include font-line(12);
+			}
+
+			& p:last-child {
+				color: #2581c6;
+				font-weight: 700;
+				letter-spacing: 0.13em;
+				line-height: 26px;
+				font-family: cross-platform-yu-gothic, sans-serif;
+				@include font-line(20.56);
+			}
+		}
+
+		&1 {
+			border-top: 1px dotted #9e9e9e;
+			padding-top: 10px;
+			padding-bottom: 10px;
+		}
+
+		// &3,
+		// &2 {
+		// 	.col {
+		// 		padding-bottom: 10px;
+		// 		padding-top: 17px;
+		// 	}
+		// }
+
+		&4 {
+			border-bottom: 1px dotted #9e9e9e;
+			padding: 5px;
+			& p:last-child {
+				font-weight: 500;
+				@include font-line(13);
+			}
+
+			& p:last-child {
+				letter-spacing: 0.11em;
+			}
+		}
+
+		.col {
+			width: 35%;
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+
+			& p:first-child {
+				color: #a6a6a6;
+				font-weight: 700;
+				letter-spacing: 0.15em;
+				line-height: 21px;
+				font-family: cross-platform-yu-gothic, sans-serif;
+				@include font-line(12);
+			}
+
+			& p:last-child {
+				color: #2581c6;
+				font-weight: 500;
+				letter-spacing: 0.1em;
+				line-height: 26px;
+				font-family: cross-platform-yu-gothic, sans-serif;
+				@include font-line(13);
+			}
+		}
+
+		.col1 {
+			padding: 17px 8px 10px 4px;
+			position: relative;
+			// border-right: 1px dotted #9e9e9e;
+
+			&::after {
+				content: "";
+				position: absolute;
+				width: 1px;
+				border: 1px dotted #9e9e9e;
+				height: 100%;
+				top: 0;
+				right: 0;
+			}
+		}
+
+		.col2 {
+			padding: 17px 12px 10px 17px;
+			position: relative;
+			// border-right: 1px dotted #9e9e9e;
+
+			&::after {
+				content: "";
+				position: absolute;
+				width: 1px;
+				border: 1px dotted #9e9e9e;
+				height: 100%;
+				top: 0;
+				right: 0;
+			}
+		}
+
+		.col3 {
+			width: 29%;
+			padding: 0 0 0 16px;
 		}
 	}
 }
