--- a/src/assets/scss/object/component/_card.scss
+++ b/src/assets/scss/object/component/_card.scss
@@ -810,6 +810,44 @@
 				}
 			}
 		}
+
+		.top-circle {
+			position: absolute;
+			top: 15px;
+			right: 14px;
+			background: linear-gradient(90deg, #2579bf 0%, #2593d5 50%);
+			border-radius: 50%;
+			height: 70px;
+			width: 70px;
+
+			// @include is-sp {
+			// 	height: 76.5px;
+			// 	width: 76.5px;
+			// }
+
+			&-content {
+				position: relative;
+				width: 100%;
+				height: 100%;
+				border: 2px solid #fff;
+				border-radius: 50%;
+				transform: scale(0.9);
+
+				p {
+					text-align: center;
+					@include font-line(14);
+					font-weight: 500;
+					line-height: 19px;
+					color: #fff;
+					white-space: nowrap;
+					position: absolute;
+					top: 50%;
+					left: 50%;
+					transform: translate(-50%, -50%);
+					font-family: yu-mincho-pr6n, sans-serif;
+				}
+			}
+		}
 	}
 
 	&-bottom {
@@ -860,6 +898,18 @@
 	padding: 20px;
 	width: calc(100% - 414px);
 
+	@include is-max(1050px) {
+		width: calc(100% - 350px);
+	}
+
+	@include is-max(970px) {
+		width: 100%;
+	}
+
+	@include is-sp {
+		padding: 28.5px 27px 13.5px 27px;
+	}
+
 	&--row {
 		display: flex;
 		// justify-content: space-between;
@@ -867,6 +917,10 @@
 		// padding: 20px 0 18px 0;
 		border-top: 1px dotted #9e9e9e;
 		position: relative;
+
+		@include is-sp {
+			flex-direction: column;
+		}
 
 		&1,
 		&4 {
@@ -878,6 +932,10 @@
 				line-height: 21px;
 				font-family: cross-platform-yu-gothic, sans-serif;
 				@include font-line(12);
+
+				@include is-sp {
+					@include font-line(13.5);
+				}
 			}
 
 			& p:last-child {
@@ -894,6 +952,17 @@
 			border-top: 1px dotted #9e9e9e;
 			padding-top: 10px;
 			padding-bottom: 10px;
+
+			@include is-sp {
+				flex-direction: row;
+				padding: 15px 2px;
+
+				& p:last-child {
+					@include is-sp {
+						@include font-line(21);
+					}
+				}
+			}
 		}
 
 		// &3,
@@ -907,13 +976,35 @@
 		&4 {
 			border-bottom: 1px dotted #9e9e9e;
 			padding: 5px;
+
+			@include is-sp {
+				flex-direction: row;
+				padding: 15px 2px;
+				border: none;
+			}
+
 			& p:last-child {
 				font-weight: 500;
 				@include font-line(13);
+
+				@include is-sp {
+					@include font-line(13.5);
+				}
 			}
 
 			& p:last-child {
 				letter-spacing: 0.11em;
+
+				@include is-sp {
+					@include font-line(15);
+					text-align: right;
+					position: relative;
+
+					span {
+						position: absolute;
+						left: -18px;
+					}
+				}
 			}
 		}
 
@@ -923,6 +1014,11 @@
 			justify-content: space-between;
 			align-items: center;
 
+			@include is-sp {
+				width: 100%;
+				border-bottom: 1px dotted #9e9e9e;
+			}
+
 			& p:first-child {
 				color: #a6a6a6;
 				font-weight: 700;
@@ -930,6 +1026,10 @@
 				line-height: 21px;
 				font-family: cross-platform-yu-gothic, sans-serif;
 				@include font-line(12);
+
+				@include is-sp {
+					@include font-line(13.5);
+				}
 			}
 
 			& p:last-child {
@@ -939,6 +1039,10 @@
 				line-height: 26px;
 				font-family: cross-platform-yu-gothic, sans-serif;
 				@include font-line(13);
+
+				@include is-sp {
+					@include font-line(15);
+				}
 			}
 		}
 
@@ -947,14 +1051,22 @@
 			position: relative;
 			// border-right: 1px dotted #9e9e9e;
 
+			@include is-sp {
+				padding: 15px 2px;
+			}
+
 			&::after {
 				content: "";
 				position: absolute;
 				width: 1px;
-				border: 1px dotted #9e9e9e;
+				border-right: 1px dotted #9e9e9e;
 				height: 100%;
 				top: 0;
 				right: 0;
+
+				@include is-sp {
+					border: none;
+				}
 			}
 		}
 
@@ -963,20 +1075,34 @@
 			position: relative;
 			// border-right: 1px dotted #9e9e9e;
 
+			@include is-sp {
+				padding: 15px 2px;
+			}
+
 			&::after {
 				content: "";
 				position: absolute;
 				width: 1px;
-				border: 1px dotted #9e9e9e;
+				border-right: 1px dotted #9e9e9e;
 				height: 100%;
 				top: 0;
 				right: 0;
+
+				@include is-sp {
+					border: none;
+				}
 			}
 		}
 
 		.col3 {
 			width: 29%;
 			padding: 0 0 0 16px;
+
+			@include is-sp {
+				width: 100%;
+				padding: 15px 2px;
+				border: none;
+			}
 		}
 	}
 }
