--- a/src/assets/scss/object/project/_flexbox.scss
+++ b/src/assets/scss/object/project/_flexbox.scss
@@ -6,9 +6,22 @@
 
 	&-row1 {
 		display: flex;
+
+		@include is-max(970px) {
+			flex-direction: column;
+		}
+
 		.img {
 			width: 414px;
 			position: relative;
+
+			@include is-max(1050px) {
+				width: 350px;
+			}
+
+			@include is-max(970px) {
+				width: 100%;
+			}
 
             img {
 				height: 100%;
@@ -38,6 +51,10 @@
 				bottom: 0;
 				z-index: 2;
 
+				@include is-sp {
+					padding: 0 12px 0 13px;
+				}
+
 				& p:first-child {
 					color: #fff;
 					font-weight: 700;
@@ -45,6 +62,10 @@
 					@include font-line(14);
 					line-height: 13.5px;
 					font-family: cross-platform-yu-gothic, sans-serif;
+
+					@include is-max(365px) {
+						font-size: 3.4vw;
+					}
 				}
 
 				& p:last-child {
@@ -57,6 +78,11 @@
 					padding: 0px 12px;
 					border-radius: 23px;
 					@include font-line(13);
+
+					@include is-max(365px) {
+						font-size: 3.4vw;
+						line-height: 22px;
+					}
 				}
 			}
 		}
@@ -150,7 +176,7 @@
 
 		.p-main_content__box5-col02 {
 			@include is-sp {
-				padding-top: 48.5px;
+				padding-top: 25px;
 			}
 
 			.c-card11-bottom {
@@ -171,6 +197,10 @@
 				}
 			}
 
+			@include is-sp {
+				padding-top: 25px;
+			}
+
 			.c-card11-bottom {
 				border-top: 1px solid #000;
 			}
@@ -179,6 +209,10 @@
 		.p-main_content__box5-col04,
 		.p-main_content__box5-col05 {
 			padding-top: 60px;
+
+			@include is-sp {
+				padding-top: 25px;
+			}
 
 			.c-card11-bottom {
 				min-height: 219px;
