--- a/src/assets/scss/pages/_saleofrealestate.scss
+++ b/src/assets/scss/pages/_saleofrealestate.scss
@@ -1,4 +1,21 @@
 .sore {
+	.c-banner--ttl {
+		& p:first-child {
+			@include font-line(30);
+			letter-spacing: 0 !important;
+			line-height: 41px;
+		}
+
+		& p:last-child {
+			line-height: 18px;
+		}
+		@include is-sp {
+			@include font-line(25);
+			line-height: 34px;
+			letter-spacing: -1px !important;
+		}
+	}
+
 	&__ttl {
 		color: $color-text04;
 		font-weight: 400;
@@ -50,7 +67,7 @@
 
 	&__sub {
 		color: $color-text03;
-		font-family: cross-platform-yu-gothic;
+		font-family: cross-platform-yu-gothic, sans-serif;
 		font-weight: 500;
 		letter-spacing: 0.2em;
 		line-height: 1;
@@ -70,22 +87,26 @@
 	&__headline {
 		margin-bottom: 70px;
 
+		@include is-sp {
+			margin-bottom: 25px;
+		}
+
 		.sub {
 			text-indent: -14px;
 			letter-spacing: 0.2em;
 			padding: 10px 0 20px 0;
 
-            @include is-max(430px) {
-                font-size: 5.8vw;
-            }
+			@include is-max(430px) {
+				font-size: 5.8vw;
+			}
 		}
 
-        .desc {
-            @include is-sp {
-                color: #000;
-                white-space: nowrap;
-            }
-        }
+		.desc {
+			@include is-sp {
+				color: #000;
+				white-space: nowrap;
+			}
+		}
 	}
 
 	.sect_1 {
@@ -111,6 +132,10 @@
 		&__box-big {
 			left: -60px;
 			top: 75px;
+
+			@include is-max(1000px) {
+				display: block;
+			}
 		}
 
 		&__center {
@@ -132,7 +157,12 @@
 		}
 
 		.header_subtext {
+			@include is-max(770px) {
+				font-size: 1.6vw;
+			}
+
 			@include is-sp {
+				@include font-line(13.5);
 				text-align: justify;
 				letter-spacing: 0.08em;
 				line-height: 20.2px;
@@ -162,6 +192,10 @@
 		@include is-sp {
 			.sect_2__box-big-new {
 				right: 15px;
+			}
+
+			.p-main_content__box3 {
+				padding: 100px 0 60px 0;
 			}
 		}
 
@@ -198,17 +232,36 @@
 		background: #fff !important;
 		padding-top: 156px;
 
-        @include is-sp {
-            padding-top: 100px;
-        }
+		@include is-sp {
+			margin-bottom: 87px;
+		}
+
+		@include is-sp {
+			padding-top: 124px;
+		}
 
 		.l-wrap {
 			position: relative;
 			z-index: 200;
 		}
 
+		.sp_bg6 {
+			position: absolute;
+			top: -57px;
+			width: 128px;
+			right: 13px;
+			z-index: -1;
+		}
+
 		&::after {
 			content: unset !important;
+		}
+
+		&--btn {
+			margin-top: 60px;
+			@include is-sp {
+				margin-top: 25px;
+			}
 		}
 	}
 
@@ -217,6 +270,28 @@
 		padding-bottom: 80px;
 		background: linear-gradient(to right, #003782, #0059b6) !important;
 
+		@include is-sp {
+			padding-top: 60px;
+
+			.sect_2__box-big-new {
+				width: 125px;
+				top: 6px;
+				right: 12px;
+			}
+
+			.s4-ttl {
+				letter-spacing: 0.21em;
+			}
+		}
+
+		.sp_bg3 {
+			opacity: 0.2;
+			width: 114px;
+			top: 120px;
+			left: 8px;
+			position: absolute;
+		}
+
 		&::after,
 		&::before {
 			background: linear-gradient(to right, #003782, #0059b6) !important;
@@ -224,24 +299,77 @@
 
 		&--separator {
 			margin: 20px 0;
+
+			@include is-sp {
+				margin: 25px 0;
+			}
 		}
 
-        .s4-title {
-            letter-spacing: 0.34em !important;
-            padding-bottom: 26px;
-        }
+		.s4-title {
+			letter-spacing: 0.34em !important;
+			padding-bottom: 26px;
+
+			@include is-sp {
+				padding-bottom: 50px !important;
+			}
+		}
+
+		.sect_2__box-big-new2 {
+			top: 247px;
+		}
 	}
 
 	&__section_5 {
 		background: linear-gradient(to right, #2868b1, #3b88ca) !important;
 		margin-bottom: 0 !important;
+		overflow: hidden;
 
 		.sect_5__inner-realestate--left {
 			padding-right: 5px;
+
+			@include is-max(1026px) {
+				width: 53%;
+			}
+
+			@include is-sp {
+				width: 100%;
+			}
 		}
 
 		.sect_5__inner-realestate--right {
 			align-items: stretch;
+
+			@include is-max(1026px) {
+				width: 46%;
+			}
+
+			@include is-sp {
+				width: 100vw;
+				margin: 0 calc(-50vw + 50%);
+			}
+		}
+
+		.sect_2__box-big-new {
+			position: absolute;
+			left: 75%;
+			top: 115px;
+			opacity: 0.7;
+			width: 225px;
+
+			@include is-sp {
+				left: 58%;
+				top: 74px;
+				width: 150px;
+				opacity: 1 !important;
+			}
+		}
+
+		.bg_21 {
+			position: absolute;
+			top: 168px;
+			opacity: 0.1;
+			right: 435px;
+			width: 261px;
 		}
 
 		.txt_small {
@@ -250,13 +378,42 @@
 			letter-spacing: 0.2em;
 			line-height: 26px;
 			font-weight: 500;
-			font-family: cross-platform-yu-gothic;
+			font-family: cross-platform-yu-gothic, sans-serif;
+
+			@include is-max(770px) {
+				font-size: 1.1vw;
+			}
+
+			@include is-sp {
+				padding-top: 148px;
+				@include font-line(13.5);
+				text-align: center !important;
+				letter-spacing: 0.02em;
+			}
+
+			@include is-max(415px) {
+				font-size: 3.1vw;
+			}
 		}
 
 		&--ttl {
 			color: #fff !important;
 			font-weight: 500 !important;
 			letter-spacing: 4.6px !important;
+
+			@include is-max(770px) {
+				font-size: 2vw !important;
+			}
+
+			@include is-sp {
+				font-size: 25px !important;
+				text-align: center !important;
+				letter-spacing: 0.05em !important;
+			}
+
+			@include is-max(378px) {
+				font-size: 6vw !important;
+			}
 		}
 
 		&--text {
@@ -264,6 +421,15 @@
 			font-weight: 500 !important;
 			padding-right: 95px;
 			padding-bottom: 0 !important;
+
+			@include is-max(770px) {
+				padding-right: 40px;
+			}
+
+			@include is-sp {
+				letter-spacing: 0.08em;
+				line-height: 20.5px !important;
+			}
 		}
 
 		&--btn {
@@ -273,14 +439,40 @@
 		&::after {
 			content: unset !important;
 		}
+
+		.sect_5__inner-realestate {
+			padding-top: 160px;
+
+			@include is-sp {
+				padding-top: 0;
+				padding-bottom: 54px;
+			}
+		}
 	}
 
 	&__section_6 {
 		background: linear-gradient(to right, #003782, #0059b6) !important;
 
+		@include is-sp {
+			.sect_6__inner-realestate {
+				padding-bottom: 50px;
+				padding-top: 0;
+			}
+
+			.sect_6__inner-realestate--right {
+				width: 100vw;
+				margin: 0 calc(-50vw + 50%);
+			}
+		}
+
 		&--ttl {
 			color: #fff !important;
 			font-weight: 500 !important;
+
+			@include is-sp {
+				text-align: center !important;
+				padding-top: 95.5px;
+			}
 		}
 
 		&--text {
@@ -297,6 +489,10 @@
 		background: #fff !important;
 		padding-top: 156px;
 
+		@include is-sp {
+			padding-top: 100px;
+		}
+
 		.sub {
 			text-indent: unset;
 		}
@@ -307,6 +503,11 @@
 
 		&--content {
 			padding-top: 0;
+		}
+
+		.p-main_content__box3-col02,
+		.p-main_content__box3-col03 {
+			padding-top: 30px;
 		}
 
 		.l-wrap {
@@ -341,6 +542,14 @@
 				}
 			}
 		}
+
+		.sp_bg6 {
+			position: absolute;
+			top: -57px;
+			width: 128px;
+			right: 13px;
+			z-index: -1;
+		}
 	}
 
 	.bg_15 {
@@ -350,9 +559,9 @@
 		width: 370px;
 		z-index: -1;
 
-        @include is-sp {
-            display: none;
-        }
+		@include is-sp {
+			display: none;
+		}
 	}
 
 	.bg_16 {
@@ -360,9 +569,9 @@
 		top: 151px;
 		left: -8px;
 
-        @include is-sp {
-            display: none;
-        }
+		@include is-sp {
+			display: none;
+		}
 	}
 
 	.vertical_txt {
@@ -371,6 +580,11 @@
 		position: absolute;
 		top: 25px;
 		left: 60px;
+		white-space: nowrap;
+
+		@include is-sp {
+			left: 35px;
+		}
 
 		p {
 			@include font-line(17);
@@ -381,10 +595,20 @@
 			color: #2581c6;
 			font-weight: 500;
 
+			@include is-sp {
+				font-size: 3.2vw;
+				line-height: 25px;
+			}
+
 			&:first-child {
 				text-indent: 3px;
 				margin-right: 14px;
 				height: 214px;
+
+				@include is-sp {
+					height: unset;
+					display: inline-block;
+				}
 			}
 
 			&:last-child {
@@ -399,15 +623,23 @@
 		position: absolute;
 		top: 3px;
 		right: 30px;
+		white-space: nowrap;
 
 		p {
 			@include font-line(17);
-			letter-spacing: 0.2em;
+			// letter-spacing: 0.2em;
+			letter-spacing: 2px;
 			font-family: yu-mincho-pr6n, sans-serif;
 			line-height: 35px;
 			background-color: #fff;
 			color: #2581c6;
 			font-weight: 500;
+			padding-top: 4px;
+
+			@include is-sp {
+				font-size: 3.2vw;
+				line-height: 25px;
+			}
 
 			&:first-child {
 				text-indent: 3px;
@@ -415,9 +647,9 @@
 				display: inline-block;
 			}
 
-			// &:last-child {
-
-			// }
+			&:last-child {
+				padding-bottom: 10px;
+			}
 		}
 	}
 
