--- a/src/assets/scss/pages/_interview.scss
+++ b/src/assets/scss/pages/_interview.scss
@@ -7,7 +7,7 @@
         background: linear-gradient(to right, #2079bd, #1e91d2);
 
         @include is-sp {
-            padding: 0 0 70px 0;
+            padding: 0 0 80px 0;
         }
 
         @include is-max(400px){
@@ -54,30 +54,6 @@
                 }
             }
         }
-
-        // .c-ruf-txt {
-        //     @include is-sp {
-        //         padding: 34px 0 30px 35px;
-        //         @include font-line(14.5, 17.5);
-        //         letter-spacing: 0.24em;
-        //         font-weight: 700;
-        //     }
-        //     @include is-max(375px) {
-        //         white-space: nowrap;
-        //         padding: 34px 0 30px 30px;
-        //     }
-        //     @include is-max(373px) {
-        //         font-size: 3.8vw;
-        //     }
-        //     img {
-        //         @include is-sp {
-        //             margin-right: 12.5px;
-        //         }
-        //         @include is-max(500px) {
-        //             width: 65.5px;
-        //         }
-        //     }
-        // }
 
     }
 }
@@ -129,19 +105,14 @@
 
     .clipPath {
         margin-top: -145px;
-        padding-top: 195px;
-
-        clip-path: polygon(200% 0, 100% 100%, 86% 96%, 0 100%, 0 9%);
-
+        padding-top: 220px;
+        clip-path: polygon(200% 0, 100% 100%, 86% 96%, 0 100%, 0 7%);
         background: linear-gradient(to right, #003782, #0059b6);
 
         @include is-sp {
             margin-top: -90px;
             clip-path: polygon(100% 0, 100% 100%, 86% 98.2%, 0% 100%, 0 2%);
-            padding-top: 160.5px;
-        }
-        @include is-max(376px) {
-            clip-path: polygon(100% 1%, 100% 100%, 86% 99%, 0% 100%, 0 3%);
+            padding-top: 120px;
         }
     }
     .l-wrap {
@@ -152,7 +123,7 @@
         text-align: center;
         @include font-line(10, 20);
         font-family: century-gothic, sans-serif;
-        letter-spacing: 1em;
+        letter-spacing: 0.32em;
         font-weight: 400;
 
         @include is-sp {
@@ -430,6 +401,9 @@
                         font-weight: 700;
                         font-family: cross-platform-yu-gothic, sans-serif;
                         letter-spacing: 0.2em;
+                        @include is-max(350px){
+                            font-style: 3.5vw;;
+                        }
                     }
                     &-txt {
                         margin-left: 18px;
@@ -437,6 +411,9 @@
                         font-weight: 500;
                         font-family: cross-platform-yu-gothic, sans-serif;
                         letter-spacing: 0.2em;
+                        @include is-max(350px){
+                            margin-left: 12px;
+                        }
                     }
                 }
             }
@@ -445,11 +422,13 @@
 
     .bg_1 {
         position: absolute;
-        top: -5%;
-        right: 2%;
+        top: -8%;
+        right: 10%;
 
         @include is-sp {
             width: 176px;
+            top: -5%;
+            right: 3%;
         }
     }
 
@@ -480,6 +459,7 @@
     position: relative;
 
     &-cntnt {
+        position: relative;
         padding: 112px 0 78px 0;
         &-rows {
             margin-bottom: 60px;
@@ -504,11 +484,12 @@
             }
 
             &-2 {
-                width: 390px;
-
+                width: 470px;
+                padding-left: 30px;
 
                 @include is-sp {
                     width: 100%;
+                    padding-left: 0;
                 }
 
                 &-hdr {
@@ -516,10 +497,19 @@
                     font-family: 500;
                     font-family: yu-mincho-pr6n, sans-serif;
                     color: #258acf;
-                    letter-spacing: 0.5em;
+                    letter-spacing: 0.15em;
+
+                    @include is-max(980px){
+                        font-size: 2.7vw;
+                    }
 
                     @include is-sp {
                         @include font-line(25, 37.5);
+                        letter-spacing: 0.12em;
+                    }
+
+                    @include is-max(350px){
+                        font-size: 6.9vw;
                     }
                 }
 
@@ -550,6 +540,10 @@
                     color: #333;
                     letter-spacing: 0.2em;
 
+                    @include is-max(980px){
+                        font-size: 1.3vw;
+                    }
+
                     @include is-sp {
                         @include font-line(13.5, 20);
                         padding-top: 25px;
@@ -576,8 +570,8 @@
 
     .sec2-bg1 {
         position: absolute;
-        top: 22%;
-        right: 8.9%;
+        top: 19%;
+        right: -2.1%;
         z-index: -1;
 
         @include is-sp {
@@ -588,7 +582,7 @@
     .sec2-bg2 {
         position: absolute;
         top: 58.8%;
-        left: 3%;
+        left: -7%;
         z-index: -1;
 
         @include is-sp {
@@ -620,6 +614,13 @@
         top: 22.4%;
         left: 7%;
         z-index: -1;
+        @include is-sp{
+            left: 0;
+            top: 19.4%;
+        }
+        @include is-max(376px){
+            top: 24.4%;
+        }
     }
 }
 
@@ -637,10 +638,12 @@
 
         @include is-max (376px) {
             clip-path: polygon(14% 2%, 100% 0, 100% 100%, 0 100%, 0 0);
+            padding: 120px 0 99px 0;
         }
     }
 
     &-cntnt {
+        position: relative;
         &-rows {
             margin-bottom: 60px;
             align-items: center;
@@ -666,7 +669,7 @@
                     @include font-line(26, 37);
                     font-family: 500;
                     font-family: yu-mincho-pr6n, sans-serif;
-                    letter-spacing: 0.5em;
+                    letter-spacing: 0.4em;
 
                     @include is-sp {
                         @include font-line(25, 37.5);
@@ -745,20 +748,21 @@
 
     .sec3-bg1 {
         position: absolute;
-        top: 8%;
-        right: 32%;
+        top: -9%;
+        right: 30%;
         z-index: -1;
 
         @include is-sp {
-            width: 138px;
-            right: 5%;
+            width: 176px;
+            right: -3%;
+            top: -12%;
         }
     }
 
     .sec3-bg2 {
         position: absolute;
-        bottom: 25%;
-        left: 6%;
+        bottom: 14%;
+        left: -6%;
         z-index: -1;
     }
 }
