--- a/src/assets/scss/pages/_ourenterprises.scss
+++ b/src/assets/scss/pages/_ourenterprises.scss
@@ -1,12 +1,13 @@
 .oe {
 	position: relative;
+
 	.c-banner {
 		padding: 0 0 80px 0;
 		background: linear-gradient(to right, #2079bd, #1e91d2);
 
-		@include is-max(400px){
-            padding: 0 0 95px 0;
-        }
+		@include is-max(400px) {
+			padding: 0 0 95px 0;
+		}
 
 		&--ttl {
 			p {
@@ -22,30 +23,6 @@
 				}
 			}
 		}
-
-		// .c-ruf-txt {
-		// 	@include is-sp {
-		// 		padding: 34px 0 30px 35px;
-		// 		@include font-line(14.5, 17.5);
-		// 		letter-spacing: 0.24em;
-		// 		font-weight: 700;
-		// 	}
-		// 	@include is-max(375px) {
-		// 		white-space: nowrap;
-		// 		padding: 34px 0 30px 30px;
-		// 	}
-		// 	@include is-max(373px) {
-		// 		font-size: 3.8vw;
-		// 	}
-		// 	img {
-		// 		@include is-sp {
-		// 			margin-right: 12.5px;
-		// 		}
-		// 		@include is-max(500px) {
-		// 			width: 65.5px;
-		// 		}
-		// 	}
-		// }
 	}
 
 	&__section_1 {
@@ -84,6 +61,7 @@
 		position: relative;
 		z-index: 150;
 		padding-top: 12px;
+
 		.txt {
 			width: 90%;
 			margin: 0 auto;
@@ -111,7 +89,7 @@
 		position: absolute;
 		top: 0;
 		right: 0%;
-        margin-top: -115px;
+		margin-top: -115px;
 
 		@include is-sp {
 			width: 77%;
@@ -175,6 +153,19 @@
 
 	&-main-content {
 		padding-top: 60px;
+
+		.br-sp {
+			display: none;
+
+			@include is-max(375px) {
+				display: block;
+			}
+
+			@include is-max(340px) {
+				display: none;
+			}
+		}
+
 		.row {
 			display: flex;
 			justify-content: space-between;
@@ -306,6 +297,14 @@
 				// 	}
 				// }
 
+				.u-d-f {
+					justify-content: space-between;
+				}
+
+				.oe--btn {
+					margin: 0;
+				}
+
 				&:nth-child(1) {
 					@include is-sp {
 						display: flex;
@@ -347,11 +346,9 @@
 
 					.info {
 						width: 87%;
-						background: linear-gradient(
-							100deg,
-							rgba(114, 159, 223, 0.23883056640625) 14%,
-							rgba(36, 77, 126, 1) 100%
-						);
+						background: linear-gradient(100deg,
+								rgba(114, 159, 223, 0.23883056640625) 14%,
+								rgba(36, 77, 126, 1) 100%);
 
 						&-ttl {
 							letter-spacing: 0.18em;
@@ -363,11 +360,9 @@
 				&:nth-child(3) {
 					.info {
 						width: 87%;
-						background: linear-gradient(
-							100deg,
-							rgba(114, 159, 223, 0.23883056640625) 14%,
-							rgba(36, 77, 126, 1) 100%
-						);
+						background: linear-gradient(100deg,
+								rgba(114, 159, 223, 0.23883056640625) 14%,
+								rgba(36, 77, 126, 1) 100%);
 
 						&-ttl {
 							letter-spacing: 0.18em;
@@ -381,6 +376,7 @@
 						.num {
 							top: 107px;
 						}
+
 						.info-sub {
 							letter-spacing: 0.02em;
 						}
@@ -392,11 +388,9 @@
 
 					.info {
 						width: 86%;
-						background: linear-gradient(
-							100deg,
-							rgba(168, 88, 61, 0.7234244039412641) 29%,
-							rgba(165, 47, 55, 0.6253851882549895) 55%
-						);
+						background: linear-gradient(100deg,
+								rgba(168, 88, 61, 0.7234244039412641) 29%,
+								rgba(165, 47, 55, 0.6253851882549895) 55%);
 
 						&-ttl {
 							letter-spacing: 0.18em;
@@ -440,6 +434,7 @@
 						letter-spacing: 0.15em;
 					}
 				}
+
 				&02 {
 					color: $color-text04;
 					font-family: century-gothic, sans-serif;
@@ -455,6 +450,7 @@
 						text-transform: unset;
 					}
 				}
+
 				&03 {
 					color: #fff;
 					font-family: cross-platform-yu-gothic, sans-serif;
@@ -489,7 +485,7 @@
 	&__bg_1 {
 		position: absolute;
 		top: -85px;
-		right: 63px;
+		right: 47px;
 		width: 379px;
 
 		@include is-sp {
