changed: adjust padding on pc in section 7 cards

--- a/src/assets/scss/pages/_saleofrealestate.scss
+++ b/src/assets/scss/pages/_saleofrealestate.scss
@@ -507,7 +507,9 @@
 
 		.p-main_content__box3-col02,
 		.p-main_content__box3-col03 {
-			padding-top: 30px;
+			@include is-sp {
+				padding-top: 30px;
+			}
 		}
 
 		.l-wrap {
